# ParticleSimulator

./: .gitignore  CMakeLists.txt
include/GL/: glew.h
include/GLFW/: glfw3.h
src/: callbacks.cpp  callbacks.h  main.cpp  utility.h
src/cameras/: Camera.cpp
src/lights/: Light.h
src/materials/: Material.cpp  Material.h  PhongMaterial.cpp  PhongMaterial.h  Shader.cpp  Shader.h
src/objects/: EmptyObject.cpp  EmptyObject.h  FieldObject.cpp  FieldObject.h  MagneticObject.cpp  MagneticObject.h  MeshObject.cpp  MeshObject.h  Object.cpp  Object.fwd.h  Object.h  WireObject.cpp  WireObject.h
src/shaders/: phong_f.glsl  phong_v.glsl  simple_f.glsl  simple_v.glsl  vertex_f.glsl  vertex_v.glsl
src/viewports/: Camera.cpp  Camera.h  EmptyObject.cpp  EmptyObject.h  Light.cpp  Object.cpp  Object.h  PhysicsViewport.cpp  PhysicsViewport.h  Shader.cpp  Shader.h  Viewport.cpp  Viewport.fwd.h  Viewport.h
